Backed out 2 changesets (bug 1931901) for causing build bustages in TelemetryScalar.cpp. CLOSED TREE
Backed out changeset f6b042d46afc (bug 1931901)
Backed out changeset 54d0cd358eea (bug 1931901)

UltraBlame original commit: a635fc061556de8501069d83b02b083892ab2802

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -7935,7 +7935,6 @@ telemetry.test:
     release_channel_collection: opt-out
     products:
       - 'firefox'
-      - 'fennec'
       - 'thunderbird'
     record_in_processes:
       - 'main'
@@ -8352,7 +8351,7 @@ telemetry.test:
     expires: never
     kind: uint
     notification_emails: [glean-team@mozilla.com]
-    products: ["firefox", "fennec", "thunderbird"]
+    products: ["firefox", "thunderbird"]
     record_in_processes: ["all"]
     release_channel_collection: opt-out
 
