--- a/toolkit/components/telemetry/tests/browser/browser.toml
+++ b/toolkit/components/telemetry/tests/browser/browser.toml
@@ -5,6 +5,9 @@ support-files = [
   "gizmo.mp4",
 ]
 
+["browser_DynamicScalars.js"]
+skip-if = ["verify"]
+
 ["browser_UpdatePingSuccess.js"]
 
 ["browser_media_element_in_page_scalar.js"]
