Bug 1932179 [wpt PR 49267] - Update wpt metadata, a=testonly
wpt-pr: 49267
wpt-type: metadata

UltraBlame original commit: fe8cc09d28f8644987f6b3589b457b078b3f1b43

--- a/testing/web-platform/meta/dom/nodes/moveBefore/tentative/selection-preserve.html.ini
+++ b/testing/web-platform/meta/dom/nodes/moveBefore/tentative/selection-preserve.html.ini
@@ -25,3 +25,12 @@
 
   [moveBefore selection is preserved when directionality changes]
     expected: FAIL
+
+  [moveBefore resets selection that enters a subtree, when the whole selection is moved]
+    expected: FAIL
+
+  [moveBefore focus node moved up to shrink selection and exclude nodes; focus node gets reset]
+    expected: FAIL
+
+  [moveBefore selection is not preserved, especially when underlying range gets inverted]
+    expected: FAIL
