Bug 1933122 - add 1proc to osint for mochitest-chrome. r=ahal
Differential Revision: https://phabricator.services.mozilla.com/D230150

UltraBlame original commit: ac01cceb5ae2fa3ce1e21f04f50f2fb98371a163

--- a/taskcluster/config.yml
+++ b/taskcluster/config.yml
@@ -120,6 +120,8 @@ treeherder:
         'M-f-swr-cf': 'Mochitest failures software webrender w/confirm failure'
         'M-msix': 'Mochitests from MSIX builds'
         'M-msix-cf': 'Mochitests confirm failure from MSIX builds'
+        'M-1proc-osint': 'Mochitests tagged with os-integration and running with 1proc'
+        'M-1proc-osint-cf': 'Mochitests tagged with os-integration and running with 1proc for confirm-failures'
         'M-osint': 'Mochitests tagged with os-integration'
         'Mn': 'Marionette tests'
         'Mn-swr': 'Marionette tests with software webrender enabled'
