Bug 1931761 - add task configuration matrix to test-info. r=ahal
Differential Revision: https://phabricator.services.mozilla.com/D229266

UltraBlame original commit: c8002bfb9c15e7a4a8e74a82960ec942684f318f

--- a/taskcluster/kinds/source-test/file-metadata.yml
+++ b/taskcluster/kinds/source-test/file-metadata.yml
@@ -116,11 +116,12 @@ test-info-all:
             - linux64-pkgconf
             - sysroot-x86_64-linux-gnu
             - sysroot-wasm32-wasi
+    use-python: system
     run:
         using: run-task
         cwd: '{checkout}'
         command: >-
             source taskcluster/scripts/misc/source-test-common.sh &&
             ./mach test-info testrun-report --output-file /builds/worker/artifacts/test-run-info.json &&
-            ./mach test-info report --show-tests --show-summary --show-testruns --verbose --output-file /builds/worker/artifacts/test-info-all-tests.json --runcounts-input-file /builds/worker/artifacts/test-run-info.json &&
+            ./mach test-info report --show-tests --show-summary --show-testruns --verbose --output-file /builds/worker/artifacts/test-info-all-tests.json --config-matrix-output-file /builds/worker/artifacts/test-info-testrun-matrix.json --runcounts-input-file /builds/worker/artifacts/test-run-info.json &&
             ./mach test-info report --show-annotations --output-file /builds/worker/artifacts/test-info-manifest-conditions.json
