--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -1429,6 +1429,103 @@ onboarding:
     metadata:
       tags:
         - Onboarding
+  terms_of_service_card:
+    type: event
+    description: |
+      User viewed the terms of service onboarding card.
+    extra_keys:
+      element_type:
+        type: string
+        description: |
+          Type of element that was viewed.
+      action:
+        type: string
+        description: |
+          Type of action taken by the user.
+      sequence_position:
+        type: string
+        description: |
+          Position of the onboarding card in the onboarding flow.
+      sequence_id:
+        type: string
+        description: |
+          Identifier for the sequence.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1933253
+    data_reviews:
+      - https://phabricator.services.mozilla.com/D230140
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - android-probes@mozilla.com
+    expires: never
+    metadata:
+      tags:
+        - Onboarding
+  terms_of_service_link_clicked:
+    type: event
+    description: |
+      User clicked the terms of service link on the onboarding card.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1933253
+    data_reviews:
+      - https://phabricator.services.mozilla.com/D230140
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - android-probes@mozilla.com
+    expires: never
+    metadata:
+      tags:
+        - Onboarding
+  terms_of_service_privacy_notice_link_clicked:
+    type: event
+    description: |
+      User clicked the privacy policy link on the terms of service onboarding card.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1933253
+    data_reviews:
+      - https://phabricator.services.mozilla.com/D230140
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - android-probes@mozilla.com
+    expires: never
+    metadata:
+      tags:
+        - Onboarding
+  terms_of_service_manage_link_clicked:
+    type: event
+    description: |
+      User clicked the manage link on the terms of service onboarding card.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1933253
+    data_reviews:
+      - https://phabricator.services.mozilla.com/D230140
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - android-probes@mozilla.com
+    expires: never
+    metadata:
+      tags:
+        - Onboarding
+  terms_of_service_accepted:
+    type: event
+    description: |
+      User clicked accept button on the terms of service onboarding card.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1933253
+    data_reviews:
+      - https://phabricator.services.mozilla.com/D230140
+    data_sensitivity:
+      - interaction
+    notification_emails:
+      - android-probes@mozilla.com
+    expires: never
+    metadata:
+      tags:
+        - Onboarding
   add_on_installed:
     type: event
     description: |
