--- a/mobile/android/fenix/app/onboarding.fml.yaml
+++ b/mobile/android/fenix/app/onboarding.fml.yaml
@@ -128,7 +128,16 @@ objects:
         description: >
           An optional list of add-ons which will be shown in add-on onboarding card.
         default: []
-
+      customization-toolbar-data:
+        type: List<CustomizationToolbarData>
+        description: >
+          An optional list of toolbar placements for the toolbar placement card.
+        default: []
+      term-of-service-data:
+        type: Option<TermsOfServiceData>
+        description: >
+          An optional terms of service data for the onboarding card.
+        default: null
   AddOnData:
       description: An object to describe an add-on to be installed from the onboarding card.
       fields:
@@ -168,6 +177,69 @@ objects:
           # This should never be defaulted.
           default: "0.0"
 
+  CustomizationToolbarData:
+    description: An object to describe the placement of the toolbar.
+    fields:
+      toolbar-type:
+        type: ToolbarType
+        description: The type of toolbar placement.
+        # This should never be defaulted.
+        default: toolbar-top
+      label:
+        type: Text
+        description: Display text for the toolbar placement option (e.g. "Top placement").
+        # This should never be defaulted.
+        default: ""
+      image-res:
+        type: Image
+        description: The resource id of toolbar placement image.
+        # This should never be defaulted.
+        default: ic_onboarding_customize_toolbar
+
+  TermsOfServiceData:
+    description: An object to describe the terms of service onboarding card.
+    fields:
+      lineOneText:
+        type: Text
+        description: The text for line one.
+        # This should never be defaulted.
+        default: ""
+      lineOneLinkText:
+        type: Text
+        description: The text for the link of line one.
+        # This should never be defaulted.
+        default: ""
+      lineOneLinkURL:
+        type: Text
+        description: The url for the link of line one.
+        # This should never be defaulted.
+        default: ""
+      lineTwoText:
+        type: Text
+        description: The text for line two.
+        # This should never be defaulted.
+        default: ""
+      lineTwoLinkText:
+        type: Text
+        description: The text for the link of line two.
+        # This should never be defaulted.
+        default: ""
+      lineTwoLinkURL:
+        type: Text
+        description: The url for the link of line two.
+        # This should never be defaulted.
+        default: ""
+      lineThreeText:
+        type: Text
+        description: The text for line three.
+        # This should never be defaulted.
+        default: ""
+      lineThreeLinkText:
+        type: Text
+        description: The text for the link of line three.
+        # This should never be defaulted.
+        default: ""
+
 enums:
 
   OnboardingCardType:
@@ -183,3 +255,15 @@ enums:
         description: Allows user to add search widget to homescreen.
       add-ons:
         description: Allows user to install add-ons from onboarding.
+      toolbar-placement:
+        description: Allows user to choose the toolbar position.
+      terms-of-service:
+        description: Page to display the terms of services.
+
+  ToolbarType:
+    description: An enum to describe a toolbar placement option.
+    variants:
+      toolbar-top:
+        description: Sets the toolbar placement on the top.
+      toolbar-bottom:
+        description: Sets the toolbar placement on the bottom.
