--- a/toolkit/components/ml/tests/browser/perftest.toml
+++ b/toolkit/components/ml/tests/browser/perftest.toml
@@ -3,6 +3,9 @@ support-files = [
     "head.js",
 ]
 
+["browser_ml_autofill_perf.js"]
+disabled = "Disabled as we want to run this only as perftest, not regular CI"
+
 ["browser_ml_engine_multi_perf.js"]
 disabled = "Disabled as we want to run this only as perftest, not regular CI"
 
@@ -18,5 +21,5 @@ disabled = "Disabled as we want to run this only as perftest, not regular CI"
 ["browser_ml_suggest_ner_perf.js"]
 disabled = "Disabled as we want to run this only as perftest, not regular CI"
 
-["browser_ml_autofill_perf.js"]
+["browser_ml_summarizer_perf.js"]
 disabled = "Disabled as we want to run this only as perftest, not regular CI"
