--- a/python/mozperftest/perfdocs/config.yml
+++ b/python/mozperftest/perfdocs/config.yml
@@ -63,6 +63,7 @@ suites:
             "ML Suggest Intent Model": ""
             "ML Suggest NER Model": ""
             "ML Autofill Model": ""
+            "ML Summarizer Model": ""
 
     intl/benchmarks/test/xpcshell:
         description: "Performance tests running through XPCShell for Intl code"
