Bug 1933139 - [devtools] Fix debugger preview tooltip on scripts with `using` keyword. r=devtools-reviewers,bomsy.
This adds the babel plugin supporting the explicit resource management API.

Differential Revision: https://phabricator.services.mozilla.com/D230084

UltraBlame original commit: b597aa591c2bb043285a5429e8d49faff5c7213f

--- a/devtools/client/debugger/test/mochitest/browser_aj.toml
+++ b/devtools/client/debugger/test/mochitest/browser_aj.toml
@@ -20,6 +20,7 @@ support-files = [
 prefs = [
  "dom.ipc.processPrelaunch.enabled=false", # Disable randomly spawning processes during tests. After enabling windowless service workers, a process spawning will trigger an update of the service workers list which can fail the test if it occurs during shutdown (unhandled promise rejection).
  "devtools.debugger.features.javascript-tracing=true", # This pref has to be set before the process starts
+ "javascript.options.experimental.explicit_resource_management=true", # This pref has to be set before the process starts
 ]
 
 ["browser_dbg-async-stepping.js"]
