--- a/devtools/client/debugger/package.json
+++ b/devtools/client/debugger/package.json
@@ -54,6 +54,7 @@
     "@babel/parser": "^7.23.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-class-static-block": "^7.21.0",
+    "@babel/plugin-proposal-explicit-resource-management": "^7.25.9",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
