--- a/taskcluster/kinds/fetch/toolchains.yml
+++ b/taskcluster/kinds/fetch/toolchains.yml
@@ -241,11 +241,11 @@ ldid:
         revision: 4bf8f4d60384a0693dbbe2084ce62a35bfeb87ab
 
 libdmg-hfsplus:
-    description: libdmg-hfsplug source code
+    description: libdmg-hfsplus source code
     fetch:
         type: git
         repo: https://github.com/mozilla/libdmg-hfsplus/
-        revision: a0a959bd25370c1c0a00c9ec525e3e78285adbf9
+        revision: 95357fa65c04217a9ee4d6157692e5491872f511
 
 hfsplus-tools:
     description: hfstools-plus source code
@@ -354,12 +354,12 @@ clang-14:
         repo: https://github.com/llvm/llvm-project
         revision: 4bc1d0b51c8e488d78ab69c8b19cfbcd1f7db6a4
 
-clang-18:
-    description: clang 18.1.7 source code
+clang-19:
+    description: clang 19.1.4 source code
     fetch:
         type: git
         repo: https://github.com/llvm/llvm-project
-        revision: 768118d1ad38bf13c545828f67bd6b474d61fc55
+        revision: aadaa00de76ed0c4987b97450dd638f63a385bed
 
 clang-trunk:
     description: clang main branch source code
