Bug 1932595 [wpt PR 49308] - Update wpt metadata, a=testonly
wpt-pr: 49308
wpt-type: metadata

UltraBlame original commit: f8aeb17b5073af834d55f361eda1651870fcca73

--- a/testing/web-platform/meta/web-animations/idlharness.window.js.ini
+++ b/testing/web-platform/meta/web-animations/idlharness.window.js.ini
@@ -158,3 +158,9 @@
   [idl_test setup]
     expected:
       if (processor == "x86") and (os == "win") and not debug: [PASS, FAIL]
+
+  [Animation interface: attribute overallProgress]
+    expected: FAIL
+
+  [Animation interface: new Animation() must inherit property "overallProgress" with the proper type]
+    expected: FAIL
