--- a/testing/web-platform/meta/console/console-label-conversion.any.js.ini
+++ b/testing/web-platform/meta/console/console-label-conversion.any.js.ini
@@ -3,3 +3,6 @@
 [console-label-conversion.any.html]
   expected:
     if (os == "android") and fission: [OK, TIMEOUT]
+
+[console-label-conversion.any.shadowrealm.html]
+  expected: ERROR
