--- a/testing/web-platform/meta/webdriver/tests/bidi/browsing_context/load/load.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/bidi/browsing_context/load/load.py.ini
@@ -1,8 +1,4 @@
-[dom_content_loaded.py]
-  [test_new_context[window\]]
-    disabled:
-      if os == "android": Not supported
-
+[load.py]
   [test_new_context_not_emitted[tab\]]
     expected: FAIL
 
