Bug 1933019 [wpt PR 49344] - Update wpt metadata, a=testonly
wpt-pr: 49344
wpt-type: metadata

UltraBlame original commit: 3c4af194accd3d8877238a1104d70f2d4a12469a

--- a/testing/web-platform/meta/css/css-pseudo/parsing/the-check-pseudo-element.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-pseudo/parsing/the-check-pseudo-element.tentative.html.ini
@@ -16,3 +16,21 @@
 
   ["::part(foo)::check" should be a valid selector]
     expected: FAIL
+
+  ["::checkmark" should be a valid selector]
+    expected: FAIL
+
+  ["*::checkmark" should be a valid selector]
+    expected: FAIL
+
+  ["foo.bar[baz\]::checkmark" should be a valid selector]
+    expected: FAIL
+
+  ["::checkmark::marker" should be a valid selector]
+    expected: FAIL
+
+  ["::slotted(*)::checkmark" should be a valid selector]
+    expected: FAIL
+
+  ["::part(foo)::checkmark" should be a valid selector]
+    expected: FAIL
