--- a/testing/web-platform/meta/html/cross-origin-opener-policy/coop-noopener-allow-popups.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/coop-noopener-allow-popups.https.html.ini
@@ -1,25 +1,21 @@
 [coop-noopener-allow-popups.https.html]
   expected:
-    if os == "linux": [ERROR, TIMEOUT]
+    if (os == "win") and debug: TIMEOUT
+    if (os == "linux") and debug: TIMEOUT
     if os == "android": OK
     [TIMEOUT, ERROR]
-  [noopener-allow-popups ensures that the opener cannot script the openee, even after a navigation: unsafe-none]
-    expected:
-      if os == "android": FAIL
-      NOTRUN
-
   [\n    Cross-Origin-Opener-Policy: noopener-allow-popups means that the opener\n    has no access to the openee.\n]
     expected: FAIL
 
   [\n    Cross-Origin-Opener-Policy: noopener-allow-popups means that the opener\n    has no access to the openee.\n 1]
     expected:
-      if os == "linux": [FAIL, TIMEOUT]
+      if (os == "win") and debug: TIMEOUT
+      if (os == "linux") and debug: TIMEOUT
       if os == "android": FAIL
       [TIMEOUT, FAIL]
 
   [\n    Cross-Origin-Opener-Policy: noopener-allow-popups means that the opener\n    has no access to the openee.\n 2]
     expected:
-      if os == "linux": [NOTRUN, TIMEOUT]
       if os == "android": FAIL
       NOTRUN
 
@@ -41,4 +37,14 @@
   [\n    Cross-Origin-Opener-Policy: noopener-allow-popups means that the opener\n    has no access to the openee.\n 6]
     expected:
       if os == "android": PASS
+      NOTRUN
+
+  [\n    Cross-Origin-Opener-Policy: noopener-allow-popups means that the opener\n    has no access to the openee.\n 7]
+    expected:
+      if os == "android": FAIL
+      NOTRUN
+
+  [noopener-allow-popups ensures that the opener cannot script the openee, even after a navigation: unsafe-none]
+    expected:
+      if os == "android": FAIL
       NOTRUN
