Bug 1933609 [wpt PR 49385] - Update wpt metadata, a=testonly
wpt-pr: 49385
wpt-type: metadata

UltraBlame original commit: fef00c371821348311c84cf0b569df6ca755960d

--- a/testing/web-platform/meta/web-animations/interfaces/Animation/scroll-timeline-overallProgress.tentative.html.ini
+++ b/testing/web-platform/meta/web-animations/interfaces/Animation/scroll-timeline-overallProgress.tentative.html.ini
@@ -2,11 +2,11 @@
   [animation.overallProgress reflects the progress of a scroll animation as a number between 0 and 1]
     expected: FAIL
 
-  [animation.overallProgress reflects the overall progress of a scroll animation with multiple iterations.]
+  [animation.overallProgress reflects the overall progress of a scroll with multiple iterations.]
     expected: FAIL
 
-  [animation.overallProgress reflects the overall progress of a scroll animation that uses a view-timeline.]
+  [animation.overallProgress reflects the overall progress of a scroll that uses a view-timeline.]
     expected: FAIL
 
-  [overallProgresss of a view-timeline is bounded between 0 and 1.]
+  [overallProgress of a view-timeline is bounded between 0 and 1.]
     expected: FAIL
