--- a/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-timing.html.ini
+++ b/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-timing.html.ini
@@ -4,10 +4,13 @@
   [Timing of fullscreenchange and resize events]
     expected:
       if (os == "linux") and fission and tsan: FAIL
+      if (os == "linux") and not fission and debug: [PASS, FAIL]
+      if (os == "linux") and not fission and not debug: FAIL
       if (os == "mac") and not debug: [FAIL, PASS, TIMEOUT]
-      [FAIL, PASS]
+      [PASS, FAIL]
 
   [Timing of fullscreenerror event]
     expected:
-      if (os == "win") and not debug: PASS
+      if (os == "linux") and debug and fission: [FAIL, PASS]
+      if (os == "win") and not debug and (processor == "x86_64"): PASS
       [PASS, FAIL]
