Bug 1932319 - update Rust zerovec-derive crate to v0.10.3 r=valentin,supply-chain-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D229592

UltraBlame original commit: 126e7c4bccc301d446a4cd96e15d8c32b51897db

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -2567,6 +2567,11 @@ who = "André Bargull <andre.bargull@gmail.com>"
 criteria = "safe-to-deploy"
 delta = "1.4.0 -> 1.5.1"
 
+[[audits.icu_calendar]]
+who = "Max Inden <mail@max-inden.de>"
+criteria = "safe-to-deploy"
+delta = "1.5.1 -> 1.5.2"
+
 [[audits.icu_calendar_data]]
 who = "André Bargull <andre.bargull@gmail.com>"
 criteria = "safe-to-deploy"
@@ -5751,6 +5756,11 @@ version = "0.10.1"
 who = "Makoto Kato <m_kato@ga2.so-net.ne.jp>"
 criteria = "safe-to-deploy"
 delta = "0.10.1 -> 0.10.2"
+
+[[audits.zerovec-derive]]
+who = "Max Inden <mail@max-inden.de>"
+criteria = "safe-to-deploy"
+delta = "0.10.2 -> 0.10.3"
 
 [[audits.zip]]
 who = "Alex Franchuk <afranchuk@mozilla.com>"
