Bug 1933829 - Update test expectations for intermitettly failing tests in shadowrealm-in-serviceworker. CLOSED TREE
Differential Revision: https://phabricator.services.mozilla.com/D230533

UltraBlame original commit: a0816d12317820883c8656b86d2bcdd2cfc4e814

--- a/testing/web-platform/meta/streams/readable-streams/default-reader.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-streams/default-reader.any.js.ini
@@ -27,8 +27,7 @@
 
 [default-reader.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if (os == "android") and not debug and sessionHistoryInParent: [ERROR, TIMEOUT]
-    if (os == "android") and not debug and not sessionHistoryInParent: [ERROR, TIMEOUT]
+    if os == "android": [ERROR, TIMEOUT]
     if os == "linux": [TIMEOUT, ERROR]
     ERROR
 
