--- a/testing/web-platform/meta/streams/readable-streams/reentrant-strategies.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-streams/reentrant-strategies.any.js.ini
@@ -31,7 +31,6 @@
 
 [reentrant-strategies.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if (os == "android") and not debug and sessionHistoryInParent: [ERROR, TIMEOUT]
-    if (os == "android") and not debug and not sessionHistoryInParent: [ERROR, TIMEOUT]
+    if os == "android": [ERROR, TIMEOUT]
     if os == "linux": [TIMEOUT, ERROR]
     ERROR
