--- a/testing/web-platform/meta/compression/decompression-correct-input.tentative.any.js.ini
+++ b/testing/web-platform/meta/compression/decompression-correct-input.tentative.any.js.ini
@@ -23,9 +23,7 @@
 
 [decompression-correct-input.tentative.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if (os == "android") and debug and sessionHistoryInParent: [ERROR, TIMEOUT]
-    if (os == "android") and not debug and sessionHistoryInParent: [ERROR, TIMEOUT]
-    if (os == "android") and not debug and not sessionHistoryInParent: [ERROR, TIMEOUT]
+    if os == "android": [ERROR, TIMEOUT]
     if os == "linux": [TIMEOUT, ERROR]
     ERROR
 
