--- a/testing/web-platform/meta/compression/decompression-uint8array-output.tentative.any.js.ini
+++ b/testing/web-platform/meta/compression/decompression-uint8array-output.tentative.any.js.ini
@@ -19,9 +19,7 @@
 
 [decompression-uint8array-output.tentative.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if (os == "android") and sessionHistoryInParent and debug: [ERROR, TIMEOUT]
-    if (os == "android") and sessionHistoryInParent and not debug: [ERROR, TIMEOUT]
-    if (os == "android") and not sessionHistoryInParent and not debug: [ERROR, TIMEOUT]
+    if os == "android": [ERROR, TIMEOUT]
     if os == "linux": [TIMEOUT, ERROR]
     ERROR
 
