--- a/testing/web-platform/meta/streams/readable-streams/garbage-collection.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-streams/garbage-collection.any.js.ini
@@ -22,10 +22,7 @@
   expected:
     if (os == "linux") and not debug and fission and (processor == "x86_64") and not asan and not tsan: [ERROR, TIMEOUT]
     if (os == "linux") and not debug and fission and (processor == "x86"): [ERROR, TIMEOUT]
-    if (os == "android") and sessionHistoryInParent and debug: [ERROR, TIMEOUT]
-    if (os == "android") and sessionHistoryInParent and not debug: [ERROR, TIMEOUT]
-    if (os == "android") and not sessionHistoryInParent and debug: ERROR
-    if (os == "android") and not sessionHistoryInParent and not debug: [ERROR, TIMEOUT]
+    if os == "android": [ERROR, TIMEOUT]
     if os == "win": ERROR
     if os == "mac": ERROR
     [TIMEOUT, ERROR]
