--- a/testing/web-platform/meta/streams/readable-streams/general.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-streams/general.any.js.ini
@@ -27,6 +27,7 @@
     if (os == "linux") and (processor == "x86_64") and debug and fission: [TIMEOUT, ERROR]
     if (os == "linux") and (processor == "x86_64") and debug and not fission: [TIMEOUT, ERROR]
     if (os == "linux") and (processor == "x86_64") and not debug and not fission: [TIMEOUT, ERROR]
+    if (os == "android"): [TIMEOUT, ERROR]
     ERROR
 
 [general.any.shadowrealm-in-shadowrealm.html]
