--- a/testing/web-platform/meta/wasm/jsapi/memory/grow.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/memory/grow.any.js.ini
@@ -30,12 +30,7 @@
 
 [grow.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if (os == "linux") and not debug and fission and (processor == "x86_64") and not asan and tsan: [ERROR, TIMEOUT]
-    if (os == "linux") and not debug and fission and (processor == "x86_64") and not asan and not tsan: [ERROR, TIMEOUT]
-    if (os == "linux") and not debug and fission and (processor == "x86_64") and asan: [TIMEOUT, ERROR]
-    if (os == "linux") and not debug and fission and (processor == "x86"): [TIMEOUT, ERROR]
-    if (os == "linux") and debug and not fission: [TIMEOUT, ERROR]
-    if (os == "linux") and not debug and not fission: TIMEOUT
+    if os == "linux": [TIMEOUT, ERROR]
     if os == "android": [ERROR, TIMEOUT]
     ERROR
 
