Bug 1933829 - Further adjust test expectations. a=test-only
CLOSED TREE

UltraBlame original commit: dd2ffa8af89437d50a35d412c5f90d6174320842

--- a/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
@@ -19,7 +19,7 @@
 
 
 [patched-global.any.serviceworker.html]
-  expected: [ERROR, CRASH]
+  expected: [OK, ERROR, CRASH]
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
