Bug 1924855 - Add test for showing select dropdown from background tab; r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D225707

UltraBlame original commit: cbb4c4e933707d4454c3b68e2513c88421d027b9

--- a/layout/base/tests/browser.toml
+++ b/layout/base/tests/browser.toml
@@ -44,6 +44,8 @@ support-files = [
   "scroll_into_view_in_child.html"
 ]
 
+["browser_select_popup_from_background_tab.js"]
+
 ["browser_select_popup_position_in_out_of_process_iframe.js"]
 skip-if = [
   "os == 'mac' && os_version == '10.15' && processor == 'x86_64' && verify", # bug 1627874
