Bug 1933712 Disable mozperftest cloudflare jobs r=perftest-reviewers,sparky
Differential Revision: https://phabricator.services.mozilla.com/D230400

UltraBlame original commit: 92d47badafa25508f85d8e24e470397653608d06

--- a/taskcluster/kinds/perftest/windows11.yml
+++ b/taskcluster/kinds/perftest/windows11.yml
@@ -101,8 +101,9 @@ livesites:
         symbol: perftest({symbol})
     attributes:
         batch: false
-        cron: true
+        cron: false
     perftest:
+        # broken: bug 1933712
         - [cloudflare, netwerk/test/perf/perftest_http3_cloudflareblog.js]
         # broken: bug 1678588
         # - [fb-scroll, netwerk/test/perf/perftest_http3_facebook_scroll.js]
