Bug 1922028 - nsFileProtocolHandler's NewChannel should error on file URL with host. r=valentin,necko-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D228490

UltraBlame original commit: 019bfa83ac852b30267c7e46f3b0b81e97e1ad0e

--- a/netwerk/test/unit/xpcshell.toml
+++ b/netwerk/test/unit/xpcshell.toml
@@ -592,6 +592,8 @@ skip-if = ["tsan && socketprocess_networking"] # Bug 1808236
 
 ["test_file_protocol.js"]
 
+["test_file_url_with_host.js"]
+
 ["test_filestreams.js"]
 
 ["test_freshconnection.js"]
