--- a/dom/base/use_counter_metrics.yaml
+++ b/dom/base/use_counter_metrics.yaml
@@ -17090,6 +17090,23 @@ use.counter.css.page:
     send_in_pings:
       - use-counters
 
+  css_moz_user_modify:
+    type: counter
+    description: >
+      Whether a page used the CSS property -moz-user-modify.
+      Compare against `use.counter.top_level_content_documents_destroyed`
+      to calculate the rate.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1852098
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1852098
+    notification_emails:
+      - dom-core@mozilla.com
+      - emilio@mozilla.com
+    expires: never
+    send_in_pings:
+      - use-counters
+
   css_moz_window_dragging:
     type: counter
     description: >
@@ -20664,6 +20681,23 @@ use.counter.css.page:
     type: counter
     description: >
       Whether a page used the CSS property stroke.
+      Compare against `use.counter.top_level_content_documents_destroyed`
+      to calculate the rate.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1852098
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1852098
+    notification_emails:
+      - dom-core@mozilla.com
+      - emilio@mozilla.com
+    expires: never
+    send_in_pings:
+      - use-counters
+
+  css_moz_window_transform_origin:
+    type: counter
+    description: >
+      Whether a page used the CSS property -moz-window-transform-origin.
       Compare against `use.counter.top_level_content_documents_destroyed`
       to calculate the rate.
     bugs:
@@ -29043,6 +29077,23 @@ use.counter.css.doc:
     send_in_pings:
       - use-counters
 
+  css_moz_user_modify:
+    type: counter
+    description: >
+      Whether a document used the CSS property -moz-user-modify.
+      Compare against `use.counter.content_documents_destroyed`
+      to calculate the rate.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1852098
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1852098
+    notification_emails:
+      - dom-core@mozilla.com
+      - emilio@mozilla.com
+    expires: never
+    send_in_pings:
+      - use-counters
+
   css_moz_window_dragging:
     type: counter
     description: >
@@ -32617,6 +32668,23 @@ use.counter.css.doc:
     type: counter
     description: >
       Whether a document used the CSS property stroke.
+      Compare against `use.counter.content_documents_destroyed`
+      to calculate the rate.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1852098
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1852098
+    notification_emails:
+      - dom-core@mozilla.com
+      - emilio@mozilla.com
+    expires: never
+    send_in_pings:
+      - use-counters
+
+  css_moz_window_transform_origin:
+    type: counter
+    description: >
+      Whether a document used the CSS property -moz-window-transform-origin.
       Compare against `use.counter.content_documents_destroyed`
       to calculate the rate.
     bugs:
