Bug 1933905 - [devtools] Turn page-error.test.js into a mochitest. r=devtools-reviewers,ochameau.
We still need to keep the page error stubs because they're used in other tests,
but we remove all the ones that were solely used in pageError.js

Differential Revision: https://phabricator.services.mozilla.com/D230517

UltraBlame original commit: aabdd257621e7176c2438550ba37eedd6acba2bc

--- a/devtools/client/webconsole/test/browser/_webconsole.toml
+++ b/devtools/client/webconsole/test/browser/_webconsole.toml
@@ -407,6 +407,8 @@ fail-if = ["a11y_checks"] # Bug 1849028 clicked element may not be focusable and
 
 ["browser_webconsole_errors_after_page_reload.js"]
 
+["browser_webconsole_errors.js"]
+
 ["browser_webconsole_eval_error.js"]
 fail-if = ["a11y_checks"] # Bug 1849028 clicked element may not be focusable and/or labeled
 
