--- a/mobile/android/fenix/app/onboarding.fml.yaml
+++ b/mobile/android/fenix/app/onboarding.fml.yaml
@@ -133,6 +133,11 @@ objects:
         description: >
           An optional list of toolbar placements for the toolbar placement card.
         default: []
+      customization-theme-data:
+        type: List<CustomizationThemeData>
+        description: An optional list of theme choices for the theme selection card.
+        default: []
+
       term-of-service-data:
         type: Option<TermsOfServiceData>
         description: >
@@ -196,6 +201,25 @@ objects:
         # This should never be defaulted.
         default: ic_onboarding_customize_toolbar
 
+  CustomizationThemeData:
+    description: Defines an option for theme selection.
+    fields:
+      theme-type:
+        type: ThemeType
+        description: The type of the theming option.
+        # This should never be defaulted.
+        default: theme-system
+      label:
+        type: Text
+        description: Display text for the theme option (e.g., "Light Theme").
+        # This should never be defaulted.
+        default: ""
+      image-res:
+        type: Image
+        description: The resource id of the image to be displayed.
+        # This should never be defaulted.
+        default: ic_pick_a_theme_system_auto
+
   TermsOfServiceData:
     description: An object to describe the terms of service onboarding card.
     fields:
@@ -257,6 +281,8 @@ enums:
         description: Allows user to install add-ons from onboarding.
       toolbar-placement:
         description: Allows user to choose the toolbar position.
+      theme-selection:
+        description: Allows user to choose between dark and light themes.
       terms-of-service:
         description: Page to display the terms of services.
 
@@ -267,3 +293,13 @@ enums:
         description: Sets the toolbar placement on the top.
       toolbar-bottom:
         description: Sets the toolbar placement on the bottom.
+
+  ThemeType:
+    description: An enum to describe a theme selection option.
+    variants:
+      theme-system:
+        description: Adapts the theme to match the device's system setting.
+      theme-light:
+        description: Sets the theme to light mode.
+      theme-dark:
+        description: Sets the theme to dark mode.
