Bug 1933956 [wpt PR 49420] - Update wpt metadata, a=testonly
wpt-pr: 49420
wpt-type: metadata

UltraBlame original commit: 1eda74992443d3cc34178ba06caf22e989089b65

--- a/testing/web-platform/meta/webdriver/tests/bidi/storage/delete_cookies/partition.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/bidi/storage/delete_cookies/partition.py.ini
@@ -9,3 +9,9 @@
 
   [test_partition_context_iframe[cross_origin\]]
     expected: FAIL
+
+  [test_partition_source_origin[http\]]
+    expected: FAIL
+
+  [test_partition_source_origin[https\]]
+    expected: FAIL
