Bug 1934124 - [wpt-sync] Update web-platform-tests to b2318a06d394ec2a11f6453be1e19be03bee1b86, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: b2318a06d394ec2a11f6453be1e19be03bee1b86
wpt-type: landing

UltraBlame original commit: 6d5b3298409d6e2f098a1c778b93cab9d7988a28

--- a/testing/web-platform/meta/notifications/shownotification.https.window.js.ini
+++ b/testing/web-platform/meta/notifications/shownotification.https.window.js.ini
@@ -7,11 +7,11 @@
 
 [shownotification.https.window.html]
   expected:
-    if (os == "win") and not debug and (processor == "x86_64"): [OK, CRASH]
+    if (os == "win") and (processor == "x86_64") and debug: CRASH
+    if (os == "win") and (processor == "x86_64") and not debug: [OK, CRASH]
   [fetching multiple notifications]
     expected:
-      if (os == "android") and not debug and sessionHistoryInParent: [PASS, FAIL]
-      if (os == "android") and not debug and not sessionHistoryInParent: [PASS, FAIL]
+      if (os == "android") and not debug: [PASS, FAIL]
 
   [fetching a notification with custom data]
     expected:
