--- a/testing/web-platform/meta/service-workers/service-worker/ServiceWorkerGlobalScope/postmessage.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/ServiceWorkerGlobalScope/postmessage.https.html.ini
@@ -1,8 +1,8 @@
 [postmessage.https.html]
   expected:
-    if asan and fission: TIMEOUT
-    if asan and not fission: [OK, TIMEOUT]
+    if not asan and not sessionHistoryInParent and debug: [OK, TIMEOUT]
+    if asan: [OK, TIMEOUT]
   [Post messages among service workers]
     expected:
-      if asan and fission: TIMEOUT
-      if asan and not fission: [PASS, TIMEOUT]
+      if not asan and not sessionHistoryInParent and debug: [PASS, TIMEOUT]
+      if asan: [PASS, TIMEOUT]
