--- a/testing/web-platform/meta/IndexedDB/reading-autoincrement-indexes.any.js.ini
+++ b/testing/web-platform/meta/IndexedDB/reading-autoincrement-indexes.any.js.ini
@@ -1,7 +1,24 @@
 [reading-autoincrement-indexes.any.serviceworker.html]
   tags: [fails_in_pbm]
   expected:
+    if (os == "win") and not debug and (processor == "x86_64"): [OK, TIMEOUT]
     if (os == "mac") and not debug: [OK, ERROR]
+  [IDBIndex.getAllKeys() returns correct result for an index not covering the autoincrement key]
+    expected:
+      if (os == "win") and not debug and (processor == "x86_64"): [PASS, NOTRUN]
+
+  [IDBIndex.getAll() for an index not covering the autoincrement key]
+    expected:
+      if (os == "win") and not debug and (processor == "x86_64"): [PASS, NOTRUN]
+
+  [IDBIndex.get() for an index not covering the autoincrement key]
+    expected:
+      if (os == "win") and not debug and (processor == "x86_64"): [PASS, NOTRUN]
+
+  [IDBIndex.get() for an index on the autoincrement key]
+    expected:
+      if (os == "win") and not debug and (processor == "x86_64"): [PASS, TIMEOUT]
+
 
 [reading-autoincrement-indexes.any.html]
   expected:
