--- a/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
+++ b/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
@@ -28,30 +28,32 @@
 
   [Policy to use: digital-credentials-get 'none', is cross-origin: false, is allowed by policy: false]
     expected:
-      if os == "linux": [FAIL, TIMEOUT]
+      if os == "linux": [TIMEOUT, FAIL]
       if os == "android": NOTRUN
       FAIL
 
   [Policy to use: digital-credentials-get 'none', is cross-origin: true, is allowed by policy: false]
     expected:
       if os == "mac": [FAIL, TIMEOUT, NOTRUN]
-      if os == "linux": [TIMEOUT, NOTRUN]
+      if os == "linux": [NOTRUN, TIMEOUT]
       if os == "android": NOTRUN
-      [TIMEOUT, FAIL]
+      [FAIL, TIMEOUT]
 
   [Policy to use: digital-credentials-get 'self', is cross-origin: false, is allowed by policy: true]
     expected:
-      if os == "win": [NOTRUN, TIMEOUT]
-      if os == "mac": [NOTRUN, FAIL, TIMEOUT]
+      if os == "win": [TIMEOUT, NOTRUN]
+      if os == "mac": [TIMEOUT, NOTRUN, FAIL]
       NOTRUN
 
   [Policy to use: digital-credentials-get 'self', is cross-origin: true, is allowed by policy: false]
     expected:
-      if os == "mac": [NOTRUN, TIMEOUT]
+      if os == "mac": [NOTRUN, FAIL, TIMEOUT]
       NOTRUN
 
   [Policy to use: digital-credentials-get https://www1.web-platform.test:8443, is cross-origin: false, is allowed by policy: false]
-    expected: NOTRUN
+    expected:
+      if os == "mac": [NOTRUN, TIMEOUT]
+      NOTRUN
 
   [Policy to use: digital-credentials-get https://www1.web-platform.test:8443, is cross-origin: true, is allowed by policy: true]
     expected: NOTRUN
