--- a/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/restrict-properties/iframe-popup.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/restrict-properties/iframe-popup.https.html.ini
@@ -57,7 +57,8 @@
 
 [iframe-popup.https.html?3-4]
   expected:
-    if (os == "android") and not debug: [OK, TIMEOUT]
+    if (os == "android") and not debug and sessionHistoryInParent: [OK, TIMEOUT]
+    if (os == "android") and not debug and not sessionHistoryInParent: [OK, ERROR, TIMEOUT]
   [COOP: restrict-properties to popup COOP: restrict-properties via an iframe, with same origin iframe, same site popup with window_open]
     expected: FAIL
 
