--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -1,40 +1,35 @@
 [popover-events.html]
   [The "beforetoggle" event (listener) get properly dispatched for popovers]
     expected:
-      if (os == "linux") and not tsan and debug and not fission: [FAIL, PASS]
-      if (os == "win") and not debug and (processor == "x86"): PASS
+      if (os == "win") and (processor == "x86_64"): [FAIL, PASS]
       if (os == "mac") and not debug: PASS
-      if (os == "linux") and tsan: [FAIL, PASS]
+      if (os == "linux") and (processor == "x86"): [FAIL, PASS]
       [PASS, FAIL]
 
   [The "beforetoggle" event (attribute) get properly dispatched for popovers]
     expected:
-      if (os == "linux") and not tsan and debug and not fission: [FAIL, PASS]
-      if (os == "win") and not debug and (processor == "x86"): PASS
+      if (os == "win") and (processor == "x86_64"): [FAIL, PASS]
       if (os == "mac") and not debug: PASS
-      if (os == "linux") and tsan: [FAIL, PASS]
+      if (os == "linux") and (processor == "x86"): [FAIL, PASS]
       [PASS, FAIL]
 
   [The "beforetoggle" event is cancelable for the "opening" transition]
     expected:
-      if (os == "linux") and not tsan and debug and not fission: [FAIL, PASS]
-      if (os == "win") and not debug and (processor == "x86"): PASS
+      if (os == "win") and (processor == "x86_64"): [FAIL, PASS]
       if (os == "mac") and not debug: PASS
-      if (os == "linux") and tsan: [FAIL, PASS]
+      if (os == "linux") and (processor == "x86"): [FAIL, PASS]
       [PASS, FAIL]
 
   [The "beforetoggle" event is not fired for element removal]
     expected:
-      if (os == "linux") and not tsan and debug and not fission: [FAIL, PASS]
-      if (os == "win") and not debug and (processor == "x86"): PASS
+      if (os == "win") and (processor == "x86_64"): [FAIL, PASS]
       if (os == "mac") and not debug: PASS
-      if (os == "linux") and tsan: [FAIL, PASS]
+      if (os == "linux") and (processor == "x86"): [FAIL, PASS]
       [PASS, FAIL]
 
   [The "toggle" event is coalesced]
     expected:
-      if (os == "linux") and not tsan and debug and not fission: [FAIL, PASS]
-      if (os == "win") and not debug and (processor == "x86"): PASS
+      if (os == "win") and (processor == "x86_64"): [FAIL, PASS]
       if (os == "mac") and not debug: PASS
-      if (os == "linux") and tsan: [FAIL, PASS]
+      if (os == "linux") and (processor == "x86"): [FAIL, PASS]
       [PASS, FAIL]
