--- a/testing/web-platform/meta/scroll-animations/css/animation-timeline-view-functional-notation.tentative.html.ini
+++ b/testing/web-platform/meta/scroll-animations/css/animation-timeline-view-functional-notation.tentative.html.ini
@@ -28,7 +28,7 @@
   [animation-timeline: view(), view(inline)]
     bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1824875
     expected:
-      if os == "linux": [NOTRUN, FAIL]
+      if os == "linux": [FAIL, NOTRUN, TIMEOUT]
       FAIL
 
   [animation-timeline: view(inline) changes to view(inline 50px)]
@@ -44,10 +44,10 @@
 
   [animation-timeline: view(y)]
     expected:
-      if os == "linux": [FAIL, NOTRUN]
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       FAIL
 
   [animation-timeline: view(x 50px)]
     expected:
-      if os == "linux": [TIMEOUT, FAIL, NOTRUN]
+      if os == "linux": [FAIL, TIMEOUT, NOTRUN]
       FAIL
