--- a/testing/web-platform/meta/streams/readable-byte-streams/bad-buffers-and-views.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/bad-buffers-and-views.any.js.ini
@@ -21,7 +21,10 @@
   expected: ERROR
 
 [bad-buffers-and-views.https.any.shadowrealm-in-serviceworker.html]
-  expected: [ERROR, TIMEOUT]
+  expected:
+    if (os == "linux") and not debug and not tsan: [TIMEOUT, ERROR]
+    if (os == "mac") and debug: [TIMEOUT, ERROR]
+    [ERROR, TIMEOUT]
 
 [bad-buffers-and-views.any.shadowrealm-in-sharedworker.html]
   expected: ERROR
@@ -30,6 +33,4 @@
   expected: ERROR
 
 [bad-buffers-and-views.https.any.shadowrealm-in-audioworklet.html]
-  expected:
-    if os == "linux": TIMEOUT
-    ERROR
+  expected: ERROR
