--- a/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
@@ -3,15 +3,16 @@
 
 [patched-global.any.html]
   expected:
-    if debug and (processor == "x86_64"): CRASH
-    if debug and (processor == "x86"): [CRASH, ERROR]
+    if debug and (os == "win") and (processor == "x86_64"): [CRASH, ERROR]
+    if not debug: OK
+    CRASH
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.sharedworker.html]
   expected:
-    if debug and (os == "linux") and fission: [CRASH, ERROR]
+    if debug and (os == "android") and sessionHistoryInParent: [CRASH, ERROR]
     if not debug: OK
     CRASH
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
@@ -19,47 +20,59 @@
 
 
 [patched-global.any.serviceworker.html]
-  expected: [OK, ERROR, CRASH]
+  expected:
+    if debug and fission: [ERROR, OK, CRASH]
+    if not debug: [OK, ERROR, CRASH]
+    [ERROR, CRASH, OK]
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.worker.html]
-  expected: [OK, CRASH, ERROR]
+  expected:
+    if debug and (os == "linux") and fission: [OK, CRASH, ERROR]
+    if debug and (os == "linux") and not fission: [OK, CRASH, ERROR]
+    if debug and (os == "android"): [OK, CRASH, ERROR]
+    [OK, ERROR, CRASH]
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.shadowrealm-in-window.html]
   expected:
-    if debug and (os == "linux") and fission: [ERROR, CRASH]
+    if debug and (os == "linux"): [ERROR, CRASH]
     if debug and (os == "android"): [ERROR, CRASH]
     ERROR
 
 [patched-global.any.shadowrealm-in-dedicatedworker.html]
   expected:
-    if debug and (os == "win"): ERROR
     if not debug: ERROR
     [ERROR, CRASH]
 
 [patched-global.https.any.shadowrealm-in-audioworklet.html]
   expected:
+    if (os == "android") and debug and sessionHistoryInParent: [ERROR, CRASH]
     if os == "linux": [ERROR, CRASH]
     ERROR
 
 [patched-global.any.shadowrealm-in-shadowrealm.html]
   expected:
-    if debug and (os == "linux") and fission: [ERROR, CRASH]
-    if debug and (os == "android") and sessionHistoryInParent: [ERROR, CRASH]
-    if debug and (os == "android") and not sessionHistoryInParent: [ERROR, CRASH]
-    ERROR
+    if debug and (os == "win"): ERROR
+    if debug and (os == "mac"): ERROR
+    if not debug: ERROR
+    [ERROR, CRASH]
 
 [patched-global.any.shadowrealm-in-sharedworker.html]
   expected:
-    if debug and (os == "win") and (processor == "x86_64"): [ERROR, CRASH]
-    if debug and (os == "android") and sessionHistoryInParent: [ERROR, CRASH]
-    if debug and (os == "android") and not sessionHistoryInParent: [ERROR, CRASH]
-    ERROR
+    if debug and (os == "win") and (processor == "x86"): ERROR
+    if debug and (os == "linux") and not fission: ERROR
+    if debug and (os == "mac"): [CRASH, ERROR]
+    if not debug: ERROR
+    [ERROR, CRASH]
 
 [patched-global.https.any.shadowrealm-in-serviceworker.html]
-  expected: [ERROR, TIMEOUT]
+  expected:
+    if (os == "linux") and (processor == "x86_64") and debug: [TIMEOUT, ERROR]
+    if (os == "android") and not debug and not sessionHistoryInParent: [TIMEOUT, ERROR]
+    if (os == "linux") and (processor == "x86"): [TIMEOUT, ERROR]
+    [ERROR, TIMEOUT]
