--- a/testing/web-platform/meta/streams/readable-byte-streams/read-min.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/read-min.any.js.ini
@@ -9,7 +9,8 @@
 
 [read-min.any.worker.html]
   expected:
-    if (processor == "x86") and debug: [OK, ERROR]
+    if (os == "win") and debug and (processor == "x86"): [OK, ERROR]
+    if (os == "linux") and debug and fission: [OK, CRASH]
 
 [read-min.any.html]
   expected:
@@ -19,6 +20,8 @@
 
 [read-min.any.sharedworker.html]
   max-asserts: 2
+  expected:
+    if not sessionHistoryInParent and debug: [OK, CRASH]
 
 [read-min.https.any.shadowrealm-in-audioworklet.html]
   expected:
@@ -43,4 +46,6 @@
   expected: ERROR
 
 [read-min.any.shadowrealm-in-sharedworker.html]
-  expected: ERROR
+  expected:
+    if (os == "mac") and debug: [ERROR, CRASH]
+    ERROR
