--- a/testing/web-platform/meta/webidl/ecmascript-binding/global-mutable-prototype.any.js.ini
+++ b/testing/web-platform/meta/webidl/ecmascript-binding/global-mutable-prototype.any.js.ini
@@ -6,7 +6,7 @@
 
 [global-mutable-prototype.https.any.shadowrealm-in-audioworklet.html]
   expected:
-    if os == "linux": TIMEOUT
+    if os == "linux": [TIMEOUT, ERROR]
     ERROR
 
 [global-mutable-prototype.any.shadowrealm-in-shadowrealm.html]
@@ -16,7 +16,11 @@
   expected: ERROR
 
 [global-mutable-prototype.https.any.shadowrealm-in-serviceworker.html]
-  expected: [ERROR, TIMEOUT]
+  expected:
+    if (os == "linux") and fission and not asan and tsan: [TIMEOUT, ERROR]
+    if (os == "linux") and fission and asan: [TIMEOUT, ERROR]
+    if (os == "linux") and not fission: [TIMEOUT, ERROR]
+    [ERROR, TIMEOUT]
 
 [global-mutable-prototype.any.shadowrealm-in-dedicatedworker.html]
   expected: ERROR
