--- a/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
+++ b/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
@@ -1,8 +1,7 @@
 [sharedworker-in-worker.html]
   expected:
-    if (os == "win") and not debug and (processor == "x86_64"): [OK, ERROR]
-    if (os == "win") and not debug and (processor == "x86"): [OK, ERROR]
-    if (os == "linux") and fission and not asan: [OK, ERROR]
-    if (os == "mac") and not debug: [OK, ERROR]
+    if fission and not asan and debug and (os == "linux"): [OK, ERROR]
+    if fission and not asan and not debug: [OK, ERROR]
+    if fission and asan: [OK, ERROR]
   [Base URL in workers: new SharedWorker()]
     expected: FAIL
