--- a/testing/web-platform/meta/xhr/abort-after-send.any.js.ini
+++ b/testing/web-platform/meta/xhr/abort-after-send.any.js.ini
@@ -1,6 +1,7 @@
 [abort-after-send.any.worker.html]
   [XMLHttpRequest: abort() after send()]
     expected:
+      if not asan and (os == "linux") and debug and fission: [PASS, FAIL]
       if asan and not fission: [PASS, FAIL]
 
 
