Bug 1880009: Add lzma to toolchain sysroot for libdmg-hfsplus r=bhearsum
Differential Revision: https://phabricator.services.mozilla.com/D230634

UltraBlame original commit: 147811df7efd57db155401ef4af84db30d120b2f

--- a/taskcluster/kinds/toolchain/sysroot.yml
+++ b/taskcluster/kinds/toolchain/sysroot.yml
@@ -183,3 +183,5 @@ linux64-toolchain-sysroot:
             - libbz2-dev
             # For msix-package
             - libicu-dev
+            # For libdmg-hfsplus
+            - liblzma-dev
