Bug 1932827 - ruff: Ignore the PLC0206 warning r=linter-reviewers,taskgraph-reviewers,bhearsum,ahal,hneiva
Extracting value from dictionary without calling `.items()`  PLC0206 (ruff)
Not very interesting

Differential Revision: https://phabricator.services.mozilla.com/D229892

UltraBlame original commit: f02f9c26bbfa982d0c88c6f4fc10dca1302306c5

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ lint.ignore = [
   "E741",      # ambiguous-variable-name
   "PLR09",     # too-many-return-statements, too-many-branches, too-many-arguments, too-many-statements
   "PLR2004",   # magic-value-comparison
+  "PLC0206",   # dict-index-missing-items
 
   # These are handled by black.
   "E1", "E4", "E5", "W2", "W5"
