Bug 1934331 - [wpt-sync] Update web-platform-tests to 55e8b8dd02d79275a563e05bc346e2db0e00416e, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 55e8b8dd02d79275a563e05bc346e2db0e00416e
wpt-type: landing

UltraBlame original commit: 7c73c4958f9b9a56b4b9fd5c70e5a91c932f0bc8

--- a/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
@@ -2,37 +2,30 @@
   expected: ERROR
 
 [patched-global.any.html]
-  expected:
-    if debug and (os == "win") and (processor == "x86_64"): [CRASH, ERROR]
-    if not debug: OK
-    CRASH
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.sharedworker.html]
-  expected:
-    if debug and (os == "android") and sessionHistoryInParent: [CRASH, ERROR]
-    if not debug: OK
-    CRASH
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.serviceworker.html]
   expected:
-    if debug and fission: [ERROR, OK, CRASH]
+    if debug and (os == "android") and sessionHistoryInParent: [ERROR, CRASH, OK]
+    if debug and (os == "android") and not sessionHistoryInParent: [ERROR, CRASH, OK]
+    if debug and (os == "mac"): [CRASH, OK, ERROR]
     if not debug: [OK, ERROR, CRASH]
-    [ERROR, CRASH, OK]
+    [ERROR, OK, CRASH]
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.worker.html]
   expected:
-    if debug and (os == "linux") and fission: [OK, CRASH, ERROR]
-    if debug and (os == "linux") and not fission: [OK, CRASH, ERROR]
-    if debug and (os == "android"): [OK, CRASH, ERROR]
+    if (os == "linux") and debug and fission: [ERROR, OK, CRASH]
+    if (os == "linux") and debug and not fission: [CRASH, OK, ERROR]
     [OK, ERROR, CRASH]
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
@@ -40,8 +33,9 @@
 
 [patched-global.any.shadowrealm-in-window.html]
   expected:
+    if debug and (os == "android") and sessionHistoryInParent: [ERROR, CRASH]
+    if debug and (os == "android") and not sessionHistoryInParent: [ERROR, CRASH]
     if debug and (os == "linux"): [ERROR, CRASH]
-    if debug and (os == "android"): [ERROR, CRASH]
     ERROR
 
 [patched-global.any.shadowrealm-in-dedicatedworker.html]
@@ -52,12 +46,13 @@
 [patched-global.https.any.shadowrealm-in-audioworklet.html]
   expected:
     if (os == "android") and debug and sessionHistoryInParent: [ERROR, CRASH]
+    if (os == "android") and debug and not sessionHistoryInParent: [ERROR, CRASH]
     if os == "linux": [ERROR, CRASH]
     ERROR
 
 [patched-global.any.shadowrealm-in-shadowrealm.html]
   expected:
-    if debug and (os == "win"): ERROR
+    if debug and (os == "win") and (processor == "x86_64"): ERROR
     if debug and (os == "mac"): ERROR
     if not debug: ERROR
     [ERROR, CRASH]
@@ -66,13 +61,10 @@
   expected:
     if debug and (os == "win") and (processor == "x86"): ERROR
     if debug and (os == "linux") and not fission: ERROR
-    if debug and (os == "mac"): [CRASH, ERROR]
     if not debug: ERROR
     [ERROR, CRASH]
 
 [patched-global.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if (os == "linux") and (processor == "x86_64") and debug: [TIMEOUT, ERROR]
-    if (os == "android") and not debug and not sessionHistoryInParent: [TIMEOUT, ERROR]
-    if (os == "linux") and (processor == "x86"): [TIMEOUT, ERROR]
+    if not fission and not debug and (os == "linux"): [TIMEOUT, ERROR]
     [ERROR, TIMEOUT]
