--- a/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
+++ b/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
@@ -1,7 +1,7 @@
 [sharedworker-in-worker.html]
   expected:
-    if fission and not asan and debug and (os == "linux"): [OK, ERROR]
-    if fission and not asan and not debug: [OK, ERROR]
-    if fission and asan: [OK, ERROR]
+    if not fission and not debug and sessionHistoryInParent and (os == "android"): [OK, ERROR]
+    if fission and debug and (os == "linux"): [OK, ERROR]
+    if fission and not debug: [OK, ERROR]
   [Base URL in workers: new SharedWorker()]
     expected: FAIL
