--- a/testing/web-platform/meta/xhr/abort-after-send.any.js.ini
+++ b/testing/web-platform/meta/xhr/abort-after-send.any.js.ini
@@ -2,6 +2,7 @@
   [XMLHttpRequest: abort() after send()]
     expected:
       if not asan and (os == "linux") and debug and fission: [PASS, FAIL]
+      if asan and fission: [PASS, FAIL]
       if asan and not fission: [PASS, FAIL]
 
 
