--- a/testing/web-platform/meta/css/css-transitions/transition-events-with-document-change.html.ini
+++ b/testing/web-platform/meta/css/css-transitions/transition-events-with-document-change.html.ini
@@ -1,8 +1,14 @@
 [transition-events-with-document-change.html]
   expected:
-    if (os == "win") and debug: TIMEOUT
-    if os == "linux": [OK, TIMEOUT]
+    if (os == "linux") and not tsan and asan and fission: [TIMEOUT, OK]
+    if (os == "linux") and not tsan and asan and not fission: [OK, TIMEOUT]
+    if (os == "linux") and not tsan and not asan: [OK, TIMEOUT]
+    if (os == "android") and debug and sessionHistoryInParent: TIMEOUT
+    if (os == "linux") and tsan: [TIMEOUT, OK]
   [transition events for an element changing document]
     expected:
-      if (os == "win") and debug: TIMEOUT
-      if os == "linux": [PASS, TIMEOUT]
+      if (os == "linux") and not tsan and asan and fission: [TIMEOUT, PASS]
+      if (os == "linux") and not tsan and asan and not fission: [PASS, TIMEOUT]
+      if (os == "linux") and not tsan and not asan: [PASS, TIMEOUT]
+      if (os == "android") and debug and sessionHistoryInParent: TIMEOUT
+      if (os == "linux") and tsan: [TIMEOUT, PASS]
