--- a/testing/web-platform/meta/intersection-observer/isIntersecting-threshold.html.ini
+++ b/testing/web-platform/meta/intersection-observer/isIntersecting-threshold.html.ini
@@ -1,27 +1,24 @@
 [isIntersecting-threshold.html]
   [Scrolled to half way through target element]
     expected:
-      if (os == "win") and debug and (processor == "x86_64"): PASS
-      if (os == "win") and not debug and (processor == "x86_64"): PASS
-      if (os == "linux") and fission and (processor == "x86"): PASS
+      if (os == "linux") and (processor == "x86_64") and not debug and not asan and not tsan: [FAIL, PASS]
+      if (os == "win") and (processor == "x86_64"): PASS
       if (os == "android") and debug: PASS
       if os == "mac": PASS
       [PASS, FAIL]
 
   [Scrolled to target element completely off screen]
     expected:
-      if (os == "win") and debug and (processor == "x86_64"): PASS
-      if (os == "win") and not debug and (processor == "x86_64"): PASS
-      if (os == "linux") and fission and (processor == "x86"): PASS
+      if (os == "linux") and (processor == "x86_64") and not debug and not asan and not tsan: [FAIL, PASS]
+      if (os == "win") and (processor == "x86_64"): PASS
       if (os == "android") and debug: PASS
       if os == "mac": PASS
       [PASS, FAIL]
 
   [At initial scroll position]
     expected:
-      if (os == "win") and debug and (processor == "x86_64"): PASS
-      if (os == "win") and not debug and (processor == "x86_64"): PASS
-      if (os == "linux") and fission and (processor == "x86"): PASS
+      if (os == "linux") and (processor == "x86_64") and not debug and not asan and not tsan: [FAIL, PASS]
+      if (os == "win") and (processor == "x86_64"): PASS
       if (os == "android") and debug: PASS
       if os == "mac": PASS
       [PASS, FAIL]
