--- a/testing/web-platform/meta/streams/readable-byte-streams/read-min.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/read-min.any.js.ini
@@ -5,12 +5,14 @@
 
 [read-min.any.serviceworker.html]
   expected:
+    if (os == "android") and debug and not sessionHistoryInParent: [OK, ERROR]
     if (os == "android") and not debug: [OK, ERROR]
 
 [read-min.any.worker.html]
   expected:
     if (os == "win") and debug and (processor == "x86"): [OK, ERROR]
     if (os == "linux") and debug and fission: [OK, CRASH]
+    if (os == "android") and debug and sessionHistoryInParent: [OK, ERROR]
 
 [read-min.any.html]
   expected:
@@ -21,7 +23,8 @@
 [read-min.any.sharedworker.html]
   max-asserts: 2
   expected:
-    if not sessionHistoryInParent and debug: [OK, CRASH]
+    if (os == "win") and debug and (processor == "x86_64"): [OK, ERROR, CRASH]
+    if (os == "android") and debug and not sessionHistoryInParent: [OK, CRASH]
 
 [read-min.https.any.shadowrealm-in-audioworklet.html]
   expected:
@@ -30,6 +33,7 @@
 
 [read-min.any.shadowrealm-in-shadowrealm.html]
   expected:
+    if debug and (os == "android") and sessionHistoryInParent: [ERROR, CRASH]
     if debug and (os == "android") and not sessionHistoryInParent: [ERROR, CRASH]
     if debug and (os == "mac"): [ERROR, CRASH]
     ERROR
@@ -40,7 +44,9 @@
     ERROR
 
 [read-min.https.any.shadowrealm-in-serviceworker.html]
-  expected: [ERROR, TIMEOUT]
+  expected:
+    if not fission and asan: [TIMEOUT, ERROR]
+    [ERROR, TIMEOUT]
 
 [read-min.any.shadowrealm-in-window.html]
   expected: ERROR
