--- a/testing/web-platform/meta/trusted-types/worker-constructor.https.html.ini
+++ b/testing/web-platform/meta/trusted-types/worker-constructor.https.html.ini
@@ -1,8 +1,14 @@
 [worker-constructor.https.html]
-  expected:
-    if tsan: CRASH
   [Block ServiceWorker creation via String]
     expected: FAIL
 
   [Create ServiceWorker via string with default policy.]
     expected: FAIL
+
+  [Block Worker creation via string]
+    expected:
+      if (os == "mac") and not debug: [PASS, FAIL]
+
+  [Block SharedWorker creation via string]
+    expected:
+      if (os == "mac") and not debug: [PASS, FAIL]
