Bug 1934373 - Add more tests for EnsureCSPDoesNotBlockStringCompilation. r=smaug
Improve test coverage for [1], considering string checks for arguments
that implement TrustedScript [2] and the rejection condition on whether
"Get Trusted Type compliant string" modified the input [3].

[1] https://w3c.github.io/webappsec-csp/#can-compile-strings
[2] https://github.com/web-platform-tests/wpt/issues/49371
[3] https://github.com/web-platform-tests/wpt/issues/49367

Differential Revision: https://phabricator.services.mozilla.com/D230369

UltraBlame original commit: cb03a787fe45e9a7bf5539008edbe0c0b79f1ca2

--- a/testing/web-platform/meta/trusted-types/eval-function-constructor.html.ini
+++ b/testing/web-platform/meta/trusted-types/eval-function-constructor.html.ini
@@ -43,3 +43,15 @@
 
   [Function constructor with mixed plain and trusted strings, mask #14]
     expected: FAIL
+
+  [Function constructor with trusted strings, and a forged toString() for the one at index 0]
+    expected: FAIL
+
+  [Function constructor with trusted strings, and a forged toString() for the one at index 1]
+    expected: FAIL
+
+  [Function constructor with trusted strings, and a forged toString() for the one at index 2]
+    expected: FAIL
+
+  [Function constructor with trusted strings, and a forged toString() for the one at index 3]
+    expected: FAIL
